@@ -1,6 +1,6 @@
 Package: RInside
 Title: C++ classes to embed R in C++ applications
-Version: 0.2.10
+Version: 0.2.10.1
 Date: $Date$
 Author: Dirk Eddelbuettel and Romain Francois
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
@@ -20,7 +20,7 @@ Description: C++ classes to embed R in C++ applications
  .
  Doxygen-generated documentation of the C++ classes is available at the
  RInside website as well.
-Depends: R (>= 2.10.0), Rcpp (>= 0.8.5)
+Depends: R (>= 2.10.0), Rcpp (>= 0.10.2.4)
 LinkingTo: Rcpp
 URL: http://dirk.eddelbuettel.com/code/rinside.html
 License: GPL (>= 2)
