@@ -3,7 +3,7 @@
 // RInside.cpp: R/C++ interface class library -- Easier R embedding into C++
 //
 // Copyright (C) 2009         Dirk Eddelbuettel
-// Copyright (C) 2010 - 2012  Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2010 - 2013  Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of RInside.
 //
@@ -90,7 +90,7 @@ int myAskYesNoCancel(const char *question) {
 RInside::RInside(const int argc, const char* const argv[], const bool loadRcpp,
                  const bool verbose, const bool interactive)
 #ifdef RINSIDE_CALLBACKS
-: callbacks(0)
+    		: callbacks(0)
 #endif
 {
     initialize(argc, argv, loadRcpp, verbose, interactive);
@@ -167,9 +167,7 @@ void RInside::initialize(const int argc, const char* const argv[], const bool lo
     #endif
     R_SetParams(&Rst);
 
-    global_env_m = R_GlobalEnv ;
-
-    if (loadRcpp) {                     // if asked for, load Rcpp (before the autoloads)
+    if (true || loadRcpp) {             // we always need Rcpp, so load it anyway
         // Rf_install is used best by first assigning like this so that symbols get into the symbol table
         // where they cannot be garbage collected; doing it on the fly does expose a minuscule risk of garbage
         // collection -- with thanks to Doug Bates for the explanation and Luke Tierney for the heads-up
@@ -178,7 +176,9 @@ void RInside::initialize(const int argc, const char* const argv[], const bool lo
         Rf_eval(Rf_lang2(suppressMessagesSymbol, Rf_lang2(requireSymbol, Rf_mkString("Rcpp"))), R_GlobalEnv);
     }
 
-    autoloads();                        // loads all default packages
+    global_env_m = R_GlobalEnv;         // member variable for access to R's global environment 
+
+    autoloads();                        // loads all default packages, using code autogenerate from Makevars{,.win}
 
     if ((argc - optind) > 1){           // for argv vector in Global Env */
         Rcpp::CharacterVector s_argv( argv+(1+optind), argv+argc );
