@@ -1,3 +1,10 @@
+2013-02-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/RInside.h: Set default value of loadRcpp to true
+
+	* src/RInside.cpp: Assign R's global env. only after R has been
+	loaded, also load Rcpp unconditionally
+
 2013-01-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/examples/mpi/rinside_mpi_sample4.cpp: Added new example
